--- a/elasticsearch/elasticsearch-deployment.yaml
+++ b/elasticsearch/elasticsearch-deployment.yaml
@@ -13,8 +13,13 @@ spec:
       labels:
         app: elasticsearch
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: elasticsearch
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 1000
         image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
         ports:
         - containerPort: 9200
