--- a/otel-collector/backups/otel-collector.backup20250815.yaml
+++ b/otel-collector/backups/otel-collector.backup20250815.yaml
@@ -7,11 +7,7 @@ spec:
   mode: deployment
   image: otel/opentelemetry-collector-contrib:latest
   serviceAccount: otel-collector
-  env:
-  - name: KUBE_NODE_NAME
-    valueFrom:
-      fieldRef:
-        fieldPath: spec.nodeName
+  
   # Ports configuration
   ports:
     - name: otlp-grpc
@@ -286,29 +282,7 @@ spec:
           - topics
           - consumers
         collection_interval: 30s
-      # prometheus:
-      #   config:
-      #     scrape_configs:
-      #       - job_name: 'globeco-services'
-      #         kubernetes_sd_configs:
-      #           - role: pod
-      #             namespaces:
-      #               names:
-      #                 - globeco
-      #         relabel_configs:
-      #           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
-      #             action: keep
-      #             regex: true
-      #           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-      #             action: replace
-      #             target_label: __metrics_path__
-      #             regex: (.+)
-      #           - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
-      #             action: replace
-      #             regex: ([^:]+)(?::\d+)?;(\d+)
-      #             replacement: $1:$2
-      #             target_label: __address__
-    
+          
 
     processors:
       batch:
@@ -321,31 +295,6 @@ spec:
         spike_limit_mib: 128
         check_interval: 5s
 
-      k8sattributes:
-        auth_type: "serviceAccount"
-        passthrough: false
-        filter:
-          node_from_env_var: KUBE_NODE_NAME
-        extract:
-          metadata:
-            - k8s.pod.name
-            - k8s.pod.uid
-            - k8s.pod.start_time
-            - k8s.deployment.name
-            - k8s.namespace.name
-            - k8s.node.name
-            - k8s.pod.ip
-          labels:
-            - tag_name: k8s_pod_label_app
-              key: app
-              from: pod
-            - tag_name: k8s_pod_label_version
-              key: version
-              from: pod
-          annotations:
-            - tag_name: k8s_pod_annotation_prometheus_scrape
-              key: prometheus.io/scrape
-              from: pod
       
       # Enhanced resource processor to preserve original service.name and add pod info
       resource:
@@ -357,42 +306,18 @@ spec:
           - key: collector.version
             value: "1.0.0"
             action: upsert
-          - key: k8s_pod_name
+          - key: k8s.pod.name
             from_attribute: k8s.pod.name
             action: upsert
-          - key: k8s_pod_uid
-            from_attribute: k8s.pod.uid
-            action: upsert
-          - key: k8s_pod_start_time
-            from_attribute: k8s.pod.start_time
-            action: upsert
-          - key: k8s_deployment_name
-            from_attribute: k8s.deployment.name
-            action: upsert
-          - key: k8s_namespace_name
-            from_attribute: k8s.namespace.name
-            action: upsert
-          - key: k8s_node_name
-            from_attribute: k8s.node.name
-            action: upsert
-          - key: k8s_pod_ip
-            from_attribute: k8s.pod.ip
-            action: upsert
-          # Clean up the original attributes to avoid duplication
-          - key: k8s.pod.name
-            action: delete
-          - key: k8s.pod.uid
-            action: delete
-          - key: k8s.pod.start_time
-            action: delete
-          - key: k8s.deployment.name
-            action: delete
-          - key: k8s.namespace.name
-            action: delete
-          - key: k8s.node.name
-            action: delete
           - key: k8s.pod.ip
-            action: delete
+            value: "${env:MY_POD_IP}"
+            action: upsert
+          - key: k8s.node.name
+            value: "${env:MY_NODE_NAME}"
+            action: upsert
+          - key: k8s.namespace.name
+            value: "${env:MY_NAMESPACE}"
+            action: upsert
       
       # Separate resource processors for each PostgreSQL instance
       resource/postgres_trade:
@@ -691,10 +616,6 @@ spec:
     service:
       extensions: [health_check, pprof, zpages]
       pipelines:
-        metrics/prometheus:
-          receivers: [otlp]
-          processors: [k8sattributes, resource, batch]
-          exporters: [prometheus]
         # Main metrics pipeline for OTLP and hostmetrics
         metrics/main:
           receivers: [otlp, hostmetrics]
