--- a/elasticsearch/elasticsearch-pvc.yaml
+++ b/elasticsearch/elasticsearch-pvc.yaml
@@ -9,4 +9,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-storage 
+  storageClassName: local-storage
+  selector:
+    matchLabels:
+      app: elasticsearch
+      type: local 
