--- a/prometheus/storage-prometheus-alertmanager-0.yaml
+++ b/prometheus/storage-prometheus-alertmanager-0.yaml
@@ -1,9 +1,31 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: prometheus-alertmanager-pv
+  labels:
+    app.kubernetes.io/instance: prometheus
+    app.kubernetes.io/name: alertmanager
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage
+  local:
+    path: /mnt/disk1/prometheus-alert-manager
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - node-4
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: "2025-07-06T15:46:31Z"
-  finalizers:
-  - kubernetes.io/pvc-protection
   labels:
     app.kubernetes.io/instance: prometheus
     app.kubernetes.io/name: alertmanager
@@ -17,3 +39,4 @@ spec:
       storage: 2Gi
   storageClassName: local-storage
   volumeMode: Filesystem
+  volumeName: prometheus-alertmanager-pv
