removed postgres exporter

--- a/otel-collector/otel-collector.yaml
+++ b/otel-collector/otel-collector.yaml
@@ -286,12 +286,12 @@ spec:
           - topics
           - consumers
         collection_interval: 30s
-      prometheus:
-        config:
-          scrape_configs:
-            - job_name: 'postgres'
-              static_configs:
-                - targets: ['globeco-postgres-exporter-trade-service.globeco.svc.cluster.local:9187']
+      # prometheus:
+      #   config:
+      #     scrape_configs:
+      #       - job_name: 'postgres'
+      #         static_configs:
+      #           - targets: ['globeco-postgres-exporter-trade-service.globeco.svc.cluster.local:9187']
 
       # prometheus:
       #   config:
@@ -815,9 +815,9 @@ spec:
           processors: [memory_limiter, resource/kafkametrics_execution, batch]
           exporters: [prometheus, debug]
         
-        metrics/prometheus_postgres_exporter:
-          receivers: [prometheus]
-          exporters: [prometheus]
+        # metrics/prometheus_postgres_exporter:
+        #   receivers: [prometheus]
+        #   exporters: [prometheus]
         
         traces:
           receivers: [otlp]
