--- a/otel-collector/otel-collector-cluster-deployment.yaml
+++ b/otel-collector/otel-collector-cluster-deployment.yaml
@@ -46,10 +46,10 @@ metadata:
   namespace: monitoring
   labels:
     app: otel-collector
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "9464"
-    prometheus.io/path: "/metrics"
+  # annotations:
+  #   prometheus.io/scrape: "true"
+  #   prometheus.io/port: "9464"
+  #   prometheus.io/path: "/metrics"
 spec:
   ports:
     - name: prom-metrics
@@ -178,6 +178,45 @@ data:
         spike_limit_mib: 128
         check_interval: 5s
 
+      k8sattributes:
+        auth_type: "serviceAccount"
+        passthrough: false
+        wait_for_metadata: true
+        extract:
+          metadata:
+            - k8s.pod.name
+            - k8s.pod.uid
+            - k8s.deployment.name
+            - k8s.namespace.name
+            - k8s.node.name
+            - k8s.pod.start_time
+            - k8s.deployment.name
+            - k8s.daemonset.name
+            - k8s.statefulset.name
+            - k8s.job.name
+            - k8s.container.name
+            - container.image.name
+            - container.id
+            - container.image.tag
+          labels:
+            - tag_name: k8s.pod.label.app
+              key: app
+              from: pod
+            - tag_name: k8s.pod.label.version
+              key: version
+              from: pod
+        
+        # pod_association: # How to associate the data to a pod (order matters)
+        #   - sources: # First try to use the value of the resource attribute k8s.pod.ip
+        #       - from: resource_attribute
+        #         name: k8s.pod.ip
+        #   - sources: # Then try to use the value of the resource attribute k8s.pod.uid
+        #       - from: resource_attribute
+        #         name: k8s.pod.uid
+        #   - sources: # If neither of those work, use the request's connection to get the pod IP.
+        #       - from: connection
+        
+
       resource/mongodb_order_generation:
         attributes:
           - key: instance_name
@@ -209,7 +248,7 @@ data:
         
         metrics/mongodb_order_generation:
           receivers: [mongodb/order_generation]
-          processors: [memory_limiter, resource/mongodb_order_generation, batch]
+          processors: [memory_limiter, k8sattributes, resource/mongodb_order_generation, batch]
           exporters: [prometheus]
 
         # logs:
