--- a/jaeger/jaeger/jaeger-v2-elasticsearch.yaml
+++ b/jaeger/jaeger/jaeger-v2-elasticsearch.yaml
@@ -48,11 +48,11 @@ spec:
               mountPath: /etc/jaeger
           resources:
             limits:
-              memory: "512Mi"
-              cpu: "500m"
+              memory: "2Gi"
+              cpu: "1000m"
             requests:
-              memory: "256Mi"
-              cpu: "250m"
+              memory: "1Gi"
+              cpu: "500m"
       volumes:
         - name: jaeger-config
           configMap:
